--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "reactflow": "^11.2.0",
     "reactstrap": "^9.1.5",
     "remixicon": "^2.5.0",
+    "rete": "^1.4.9",
+    "rete-area-plugin": "^0.2.1",
+    "rete-connection-plugin": "^0.9.0",
+    "rete-context-menu-plugin": "^1.0.0-alpha9",
+    "rete-react-render-plugin": "^0.3.0",
+    "vue": "^3.2.44",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
