--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "font-awesome": "^4.7.0",
+    "jsx-runtime": "^1.2.0",
+    "mdb-react-ui-kit": "^5.0.0",
+    "next-images": "^1.8.4",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.23",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
@@ -21,6 +29,8 @@
     "rete-connection-plugin": "^0.9.0",
     "rete-context-menu-plugin": "^1.0.0-alpha9",
     "rete-react-render-plugin": "^0.3.0",
+    "source-map-loader": "^4.0.1",
+    "styled-components": "^5.3.6",
     "vue": "^3.2.44",
     "web-vitals": "^2.1.4"
   },
