--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "^5.0.1",
     "reactflow": "^11.2.0",
     "reactstrap": "^9.1.5",
-    "remixicon": "^2.5.0"
+    "remixicon": "^2.5.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
