--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "reactflow": "^11.2.0",
