--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-highlight-words": "^0.18.0",
