--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "reactstrap": "^9.1.5"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
