--- a/package.json
+++ b/package.json
@@ -3,43 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@iconscout/react-unicons": "^1.1.6",
-    "@mantine/core": "^5.8.0",
-    "@mantine/form": "^5.8.0",
-    "@mantine/hooks": "^5.8.0",
-    "@mantine/notifications": "^5.8.0",
-    "@mui/material": "^5.10.14",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
-    "concurrently": "^7.5.0",
-    "dotenv": "^16.0.3",
-    "framer-motion": "^7.6.7",
     "jquery": "^3.6.1",
-    "json-server": "^0.17.1",
-    "material-icons": "^1.12.2",
-    "query-string": "^7.1.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
-    "react-flow-renderer": "^10.3.17",
-    "react-highlight-words": "^0.18.0",
     "react-notifications": "^1.7.4",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "reactflow": "^11.2.0",
     "reactstrap": "^9.1.5",
-    "remixicon": "^2.5.0",
-    "styled-components": "^6.1.1",
-    "uuid": "^9.0.0"
+    "styled-components": "^6.1.1"
+    
   },
   "scripts": {
     "start": "react-scripts start",
