--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "antd": "^5.0.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
@@ -14,8 +15,9 @@
     "react-scripts": "^5.0.1",
     "reactflow": "^11.2.0",
     "reactstrap": "^9.1.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.1"
-    
   },
   "scripts": {
     "start": "react-scripts start",
